# subdetect

./: .gitignore  README.md  _config.yml  pixi.toml  pyproject.toml
configs/: aoi.yaml  terramind_sub.yaml  terramind_sub_s1.yaml  terramind_sub_small.yaml  terramind_sub_v10_s2only.yaml  terramind_sub_v11_s2only.yaml  terramind_sub_v11_smoke_baseline.yaml  terramind_sub_v11b_s2only.yaml  terramind_sub_v12_up2_s2only.yaml  terramind_sub_v12_up2_smoke.yaml  terramind_sub_v2.yaml  terramind_sub_v2_india.yaml  terramind_sub_v3_hardneg.yaml  terramind_sub_v3b_hardneg_half.yaml  terramind_sub_v4_s1fusion.yaml  terramind_sub_v4_s1only.yaml  terramind_sub_v4_s2only.yaml  terramind_sub_v5_s1fusion.yaml  terramind_sub_v5_s1only.yaml  terramind_sub_v5_s2only.yaml  terramind_sub_v6_s1only.yaml  terramind_sub_v6b_s1only.yaml  terramind_sub_v6c_s1only.yaml  terramind_sub_v7_s1only.yaml  terramind_sub_v8_run2_s1only.yaml  terramind_sub_v8_s1only.yaml  terramind_sub_v9_retrain_s2only.yaml  terramind_sub_v9_s2only.yaml
docs/: architecture.md  expanding-training-data.md  glossary.md  model-lineage.md  osmose-detect.md  worked-example.md
scripts/: build_chips_from_substation_ds.py  build_global_hardneg_chips.py  build_settlement_hardneg_chips.py  building_fill.py  compose_contrast_season.py  compose_s1_chip_cells.py  corridor_recall.py  ehv_detectability.py  eval_decision_fusion.py  eval_polygonize_v2.py  eval_small_subs.py  field_eval.py  infer_fused_aoi.py  infer_sindh_test_arms.py  infer_sindh_test_v11.py  infer_sindh_test_v12.py  infer_sindh_test_v9retrain.py  isolated_tower_prior.py  (+27 more)
(+20 files in other folders)
